# file-compressor-huffman-coding

./: CMakeLists.txt  README.md
docs/: compressed.huff  input.txt  output.txt
include/: BitReader.hpp  BitWriter.hpp  Huffman.hpp
src/: BitReader.cpp  BitWriter.cpp  Huffman.cpp  main.cpp
tests/: test_huffman.cpp
